<resources>
    <string name="app_name">Cryptography Algorithm</string>
    <string name="app_name2">Cryptography</string>
    <string name="input_text">Input Text</string>
    <string name="input_shift">Input Shift</string>
    <string name="decrypt">Decrypt</string>
    <string name="encryption_result">Encryption Result:</string>
    <string name="encrypt">Encrypt</string>
    <string name="decryption_result">Decryption Result:</string>
    <string name="rail_fence_algorithm">Rail Fence Algorithm</string>
    <string name="input_key">Input Key</string>
    <string name="invalid_input"><![CDATA[Invalid input. Ensure text is not empty, rails > 1.]]></string>
    <string name="invalid_input_key"><![CDATA[Invalid key input. Ensure the key is not 0 or 1 and not more than 2.147.483.647 (int data type). Key recommendation is under 100 due to memory limit.]]></string>
    <string name="show_decrypted_text">Show Decrypted Text</string>
    <string name="decrypted_text_hidden">Decrypted Text Hidden</string>
    <string name="block_cipher_algorithm">Block Cipher Algorithm</string>
    <string name="caesar_cipher_algorithm">Caesar Cipher Algorithm</string>
    <string name="stream_cipher_algorithm">Stream Cipher Algorithm</string>
    <string name="powered_by">Powered by Ribhan Aulia Zulmi</string>
    <string name="splash_screen_section">Splash Screen</string>
    <string name="welcome">Welcome</string>
    <string name="algorithm_name">Algorithm Name</string>
    <string name="algorithm_description">Algorithm Description</string>
    <string name="input_both_please"><![CDATA[Please Input Both Text & Key]]></string>
    <string name="cryptography">CRYPTOGRAPHY</string>
    <string name="welcome_to">Welcome to</string>
    <string name="out_of_memory_range">Out of memory range</string>
    <string name="text_cannot_be_empty">Text cannot be empty</string>
    <string name="key_cannot_be_empty">Key cannot be empty</string>
    <string name="text_and_key_cannot_be_empty"><![CDATA[Text & Key can\'t be empty.]]></string>
    <string name="key_cannot_be_more_than_214748367">Key can\'t be more than 2.147.483.647 (int data type length)</string>
    <string name="gallery">Gallery</string>
    <string name="camera_x">Camera X</string>
    <string name="camera">Camera\n</string>
    <string name="result">Result</string>
    <string name="empty_image_warning">Empty Image!</string>
    <string name="title_login_page">Login Page</string>
    <string name="input_your_email">Input Your Email</string>
    <string name="input_your_password">Input Your Password</string>
    <string name="signin">Sign In</string>
    <string name="signup_page_image">Signup Page Image</string>
    <string name="signup_page">Sign Up Page</string>
    <string name="input_your_username">Input Your Username</string>
    <string name="confirm_your_password">Confirm Your Password</string>
    <string name="signup">Sign Up</string>
    <string name="dont_have_account">Dont have an account? </string>
    <string name="login_button">Log in</string>
    <string name="image_login">image Login</string>
    <string name="or">Or</string>
    <string name="sign_up_button">Sign Up</string>
    <string name="logout">Log Out</string>
    <string name="login">Log In</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="account">Account</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="edit_icon">Edit Icon</string>

    <string-array name="data_name">
        <item>Caesar Cipher</item>
        <item>Rail Fence Cipher</item>
        <item>Stream Cipher (RC4)</item>
        <item>Block Cipher (AES)</item>
        <item>Super Enkripsi</item>
        <item>Steganography</item>
        <item>File Encryption</item>
        <item>Steganography Test</item>
    </string-array>

    <string-array name="data_description">
        <item>Caesar Cipher adalah menggeser urutan huruf alfabet ke kiri atau ke kanan dengan jumlah geseran tertentu.</item>
        <item>Rail Fence Cipher (RFC) adalah algoritma klasik model algoritma transposisi, Cipher (Algoritma) ini hampir mirip sistem kerjanya dengan Zig-zag Cipher. Rail Fence Cipher menggunakan teknik perubahan posisi berdasarkan tingkatan, dimana nilai tingkatan disebut kunci enkripsi dan dekripsi dalam algoritma ini.</item>
        <item>RC4 bekerja dengan menciptakan sebuah stream kunci pseudo-random yang kemudian di-XOR-kan (bitwise exclusive OR) dengan data yang akan dienkripsi atau didekripsi.</item>
        <item>AES adalah algoritma block cipher, yang artinya bekerja dengan membagi data ke dalam blok-blok yang berukuran tetap (128 bit untuk AES) dan kemudian mengenkripsi setiap blok secara terpisah.</item>
        <item>Super Enkripsi gabungan dari Caesar, Rail Fence, RC4, dan AES Cipher</item>
        <item>Steganografi adalah seni dan ilmu menulis pesan tersembunyi atau menyembunyikan pesan dengan suatu cara sehingga selain si pengirim dan si penerima, tidak ada seorang pun yang mengetahui atau menyadari bahwa ada suatu pesan rahasia. </item>
        <item>File Encryption dengan AES algorithm</item>
        <item>Steganography Test</item>
    </string-array>

    <array name="data_photo">
        <item>@drawable/caeshar_cipher</item>
        <item>@drawable/rail_fence</item>
        <item>@drawable/stream_cipher_rc4</item>
        <item>@drawable/aes</item>
        <item>@drawable/super_enkripsi</item>
        <item>@drawable/steganografi</item>
        <item>@drawable/file_png_image</item>
        <item>@drawable/elgamal</item>
    </array>


</resources>